--- a/public/index.html
+++ b/public/index.html
@@ -60,12 +60,12 @@
 <div class="content-wrapper">
 
 
-  <p><img id="foxy" src="{{ .Site.Baseurl }}/images/grayf0x.jpg" alt="A foxy face"></p>
+  <p><img id="foxy" src="public\images\grayf0x.jpg" alt="A foxy face"></p>
 <h2 id="welcome-friend">Welcome, friend</h2>
 <h3 id="purple_heart-earth_africa-purple_heart">&#x1f49c; &#x1f30d; &#x1f49c;</h3>
 <p>Born in <a href="https://en.wikipedia.org/wiki/Edmonton">The Abyss</a>, <strong>Grayfox</strong> - also known as Zerkle Snorp - has spent over two decades fiddling with things on the Internet. Today he does nothing, so stop asking.</p>
 <p>Their greatest joys are darkness and its quietudes.</p>
-<img src="{{ .Site.Baseurl }}/images/partywizard.gif">
+<img src="public\images\partywizard.gif">
 <hr>
 <h2 id="musings">Musings</h2>
 
