--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The personal writings and expressions of Grayfox, otherwise known as you too and everyone else. It is a loving and silly place.">
     <title>Home | Undercover Unicorn</title>
-    <link rel="stylesheet" href="{{ .Site.Baseurl }}/css/style.css" />
-    <link rel="stylesheet" href="{{ .Site.Baseurl }}/css/fonts.css" />
+    <link rel="stylesheet" href="/undercoverunicorn/css/style.css" />
+    <link rel="stylesheet" href="/undercoverunicorn/css/fonts.css" />
     <link rel="stylesheet" href="/undercoverunicorn/css/theme-override.css">
     
-    <!-- Include custom CSS files -->
+    <!-- Include custom CSS files 
     {{ range .Site.Params.custom_css }}
     <link rel="stylesheet" href="{{ . | relURL }}">
-    {{ end }}
+    {{ end }}-->
     
   </head>
 
@@ -60,12 +60,12 @@
 <div class="content-wrapper">
 
 
-  <p><img id="foxy" src="public\images\grayf0x.jpg" alt="A foxy face"></p>
+  <p><img id="foxy" src="\undercoverunicorn\images\grayf0x.jpg" alt="A foxy face"></p>
 <h2 id="welcome-friend">Welcome, friend</h2>
 <h3 id="purple_heart-earth_africa-purple_heart">&#x1f49c; &#x1f30d; &#x1f49c;</h3>
 <p>Born in <a href="https://en.wikipedia.org/wiki/Edmonton">The Abyss</a>, <strong>Grayfox</strong> - also known as Zerkle Snorp - has spent over two decades fiddling with things on the Internet. Today he does nothing, so stop asking.</p>
 <p>Their greatest joys are darkness and its quietudes.</p>
-<img src="public\images\partywizard.gif">
+<img src="\undercoverunicorn\images\partywizard.gif">
 <hr>
 <h2 id="musings">Musings</h2>
 
